[tool.black]
line-length=100
target-version=["py39"]

[tool.isort]
profile = "black"
atomic=true
line_length = 100
lines_after_imports=2
lines_between_types=1
known_third_party=[
    "pytest",
    "click",
]
known_first_party=["historical-system-profiles-backend"]

[tool.coverage.run]
branch = false
source = ["historical-system-profiles-backend"]
omit = ["historical-system-profiles-backend/tests/*",]

[tool.coverage.paths]
source = ["historical-system-profiles-backend/"]

[tool.coverage.report]
fail_under = 30
skip_covered = true
show_missing = true

[tool.pytest.ini_options]
minversion = "6.2.1"
addopts = "-s --tb=native --cov=."
testpaths = "./tests"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning'
    ]
[tool.poetry]
name = "historical-system-profiles-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
connexion = {extras = ["swagger-ui"], version = "2.14.2"}
kerlescan = {git = "https://github.com/RedHatInsights/kerlescan.git", rev = "0.101", develop = true}
prometheus-client = "0.16.0"
watchtower = "3.0.1"
flake8 = "5.0.4"
gunicorn = "20.1.0"
flask-sqlalchemy = "3.0.3"
alembic = "1.10.2"
flask-script = "2.0.6"
flask-migrate = "4.0.4"
psycopg2 = "2.9.5"
kafka-python = "2.0.2"
logstash-formatter = "0.5.17"
python-dateutil = "2.8.2"
pytz = "2022.7.1"
app-common-python = "0.2.5"
jsonschema = "4.17.3"
markupsafe = "2.1.2"
click = "8.1.3"


[tool.poetry.group.dev.dependencies]
black = "23.1.0"
flake8 = "5.0.4"
pytest = "7.2.2"
pytest-cov = "4.0.0"
pytest-flask = "1.2.0"
pytest-black = "0.3.12"
pytest-mock = "3.1.0"
coverage = {extras = ["toml"], version = "7.2.1"}
yamllint = "1.29.0"
mock = "5.0.1"
ipdb = "0.13.13"
toml = "0.10.2"
openapi-spec-validator = "0.5.5"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
